add_executable(ex1.5.1 ex1.5.1.cpp)
target_include_directories(ex1.5.1 PUBLIC ${PROJECT_SOURCE_DIR}/include)

add_executable(ex1.5.2 ex1.5.2.cpp)
target_include_directories(ex1.5.2 PUBLIC ${PROJECT_SOURCE_DIR}/include)

add_executable(ex1.5.3 ex1.5.3.cpp)
target_include_directories(ex1.5.3 PUBLIC ${PROJECT_SOURCE_DIR}/include)