add_executable(ex1.5.1 ex1.5.1.cpp)
target_include_directories(ex1.5.1 PUBLIC ${PROJECT_SOURCE_DIR}/include)

add_executable(ex1.5.2 ex1.5.2.cpp)
target_include_directories(ex1.5.2 PUBLIC ${PROJECT_SOURCE_DIR}/include)

add_executable(ex1.5.3 ex1.5.3.cpp)
target_include_directories(ex1.5.3 PUBLIC ${PROJECT_SOURCE_DIR}/include)

add_executable(ex1.5.4 ex1.5.4.cpp)
target_include_directories(ex1.5.4 PUBLIC ${PROJECT_SOURCE_DIR}/include)

add_executable(ex1.5.11 ex1.5.11.cpp)
target_include_directories(ex1.5.11 PUBLIC ${PROJECT_SOURCE_DIR}/include)

add_executable(ex1.5.12 ex1.5.12.cpp)
target_include_directories(ex1.5.12 PUBLIC ${PROJECT_SOURCE_DIR}/include)

add_executable(ex1.5.13 ex1.5.13_weighted_quick_union_with_path_compression.cpp)
target_include_directories(ex1.5.13 PUBLIC ${PROJECT_SOURCE_DIR}/include)

add_executable(ex1.5.14 ex1.5.14_weighte_quick_uion_by_height.cpp)
target_include_directories(ex1.5.14 PUBLIC ${PROJECT_SOURCE_DIR}/include)

add_executable(ex1.5.17 ex1.5.17.cpp)
target_include_directories(ex1.5.17 PUBLIC ${PROJECT_SOURCE_DIR}/include)